# tacrs_demo_kinova_ws

./: .gitattributes  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yaml
src/calibrate_camera_pose/: CMakeLists.txt  behavior_plugin.yaml  calibrate_camera_pose_plugin_description.xml  package.xml
src/calibrate_camera_pose/include/calibrate_camera_pose/: calibrate_camera_pose.hpp
src/calibrate_camera_pose/src/: calibrate_camera_pose.cpp  register_behaviors.cpp
src/calibration_behaviors/: CMakeLists.txt  behavior_plugin.yaml  calibration_behaviors_plugin_description.xml  package.xml
src/calibration_behaviors/include/calibration_behaviors/: average_pose_stamped_vector.hpp  calibrate_camera_pose.hpp  save_calibration_pose_yaml.hpp
src/calibration_behaviors/src/: average_pose_stamped_vector.cpp  calibrate_camera_pose.cpp  register_behaviors.cpp  save_calibration_pose_yaml.cpp
src/calibration_behaviors/test/: test_behavior_plugins.cpp
src/dependencies/zed_description/: CMakeLists.txt  package.xml
src/dependencies/zed_description/launch/: view_robot.launch.py
src/dependencies/zed_description/rviz/: rviz.rviz
src/dependencies/zed_description/urdf/: zed2i.urdf  zed2i.urdf.xacro
src/scale_twist/: CMakeLists.txt  behavior_plugin.yaml  package.xml  scale_twist_plugin_description.xml
src/scale_twist/include/scale_twist/: scale_twist.hpp
src/scale_twist/src/: register_behaviors.cpp  scale_twist.cpp
src/scale_twist/test/: test_behavior_plugins.cpp
src/site_configs/picknik_006_gen3_hw/: CMakeLists.txt  package.xml
src/site_configs/picknik_006_gen3_hw/calibration/: calibrate.yaml  calibration_poses.yaml  capture.yaml  scene_camera_calibration.yaml
src/site_configs/picknik_006_gen3_hw/config/: calibration.yaml  config.yaml
src/site_configs/picknik_006_gen3_hw/config/control/: picknik_006_gen3_hw.ros2_control.yaml
src/site_configs/picknik_006_gen3_hw/config/fuse/: fuse.rviz  fuse.yaml
src/site_configs/picknik_006_gen3_hw/config/moveit/: joint_limits.yaml  picknik_006_gen3_hw.srdf
src/site_configs/picknik_006_gen3_hw/description/: picknik_006_gen3_hw.xacro
src/site_configs/picknik_006_gen3_hw/description/assets/: calibration_tool.dae  calibration_tool.stl
src/site_configs/picknik_006_gen3_hw/launch/: 36h11.launch.yml  36h11_right.launch.yml  agent_bridge.launch.xml  calibrate_launch.py  calibration.launch.xml  calibration.launch.yml  cameras.launch.xml  fuse.launch.py  tags_36h11.yaml  view_robot.launch.py
src/site_configs/picknik_006_gen3_hw/objectives/: Grapple_RAFTI_Kinova_Hardware.xml  add_apriltag_pose_to_vector.xml  calibrate_camera_at_waypoint.xml  calibrate_camera_at_waypoint_36h11.xml  calibrate_scene_camera.xml  calibrate_scene_camera_36h11.xml  calibrate_zed_cam_from_apriltag_ros.xml  calibrate_zed_camera.xml  calibrate_zed_camera_from_3-tag_cross.xml  gettagpose_from_publishedframe.xml  grapple_rafti_-_decelerate.xml  scene_camera_calibration.yaml  scene_camera_calibration_pose.yaml  test_average_pose_stamped_vector.xml  test_calibrateposeaction.xml  test_save_calibration.xml
src/site_configs/picknik_006_gen3_hw/src/: calibration_node.cpp
src/site_configs/picknik_006_gen3_hw/waypoints/: waypoints.yaml
src/site_configs/picknik_kinova_satellite_sim/: CMakeLists.txt  README.md  package.xml
src/site_configs/picknik_kinova_satellite_sim/config/: config.yaml
src/site_configs/picknik_kinova_satellite_sim/config/fuse/: fuse.rviz  fuse.yaml  fuse2.rviz
src/site_configs/picknik_kinova_satellite_sim/config/moveit/: picknik_kinova_satellite_sim.srdf
src/site_configs/picknik_kinova_satellite_sim/description/: picknik_kinova_satellite_sim.xacro
src/site_configs/picknik_kinova_satellite_sim/description/assets/: calibration_tool.stl
src/site_configs/picknik_kinova_satellite_sim/description/mujoco/: gen3_7dof.xml  gen3_7dof_assets.xml  gen3_7dof_body.xml  gen3_7dof_rafti_fingers.xml  landsat_scene.xml  rafti_fingers_scene.xml  scene.xml
src/site_configs/picknik_kinova_satellite_sim/description/mujoco/assets/: calibration_tool_collision_0.stl  calibration_tool_collision_1.stl  calibration_tool_collision_2.stl
src/site_configs/picknik_kinova_satellite_sim/launch/: 36h11.launch.yml  agent_bridge.launch.xml  fuse.launch.py  tags_36h11.yaml  view_robot.launch.py
src/site_configs/picknik_kinova_satellite_sim/objectives/: april_tag_object_registration.xml  calibrate_camera_test.xml  catch_moving_satellite_with_fuse.xml  close_gripper.xml  compliant_grasp_landsat.xml  compliant_grasp_rafti.xml  compliant_grasp_rafti_vfc.xml  constrained_pick_place.xml  cycle_between_waypoints.xml  detected_calibration_poses.yaml  interpolate_to_joint_state.xml  joint_diagnostic.xml  move_along_path.xml  move_along_path_admittance.xml  move_to_joint_state.xml  move_to_pose.xml  odom-to-blackboard_test.xml  re_zero_force_torque_sensors.xml  request_teleoperation.xml  sample_april_tag.xml  test.xml  test_calibrate_pose.xml  test_calibrate_pose_loaded.xml  velocity_force_controller_test.xml  velocity_force_controller_zero.xml  visual_servo_teach_reference.xml  visual_servo_to_reference.xml  write_picknik.xml
src/site_configs/picknik_kinova_satellite_sim/rviz/: view_robot.rviz
src/site_configs/picknik_kinova_satellite_sim/waypoints/: waypoints.yaml
