<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>zed_description</name>
    <version>0.0.0</version>
    <description>TODO</description>
    <maintainer email="TODO@TODO.com" />
    <license>TODO</license>
    <author>TODO</author>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <depend>zed_msgs</depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
