<?xml version="1.0"?>
<package format="3">
  <name>picknik_006_gen3_hw</name>
  <version>0.1.0</version>

  <description>Robot config package for the Kinova Gen3 Dev-006 Robot in the Boulder office.</description>

  <maintainer email="david.yackzan@picknik.ai">David Yackzan</maintainer>
  <maintainer email="paul.gesel@picknik.ai">Paul Gesel</maintainer>

  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>picknik_kinova_satellite_sim</depend>

  <exec_depend>kinova_vision</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
